Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- La profecia -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Damian: la profecia II -->
+<li>
+  <a href="../Peliculas/pelicula841.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/pTSQ3VMTAxb5JJcQDJoyAFOoNtP.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Damian: la profecía II 1978</span>
+    <span class="hidden">Damián el Anticristo, que ahora está a punto de cumplir trece años, finalmente descubre su destino bajo la guía de un impío discípulo de Satanás. Mientras tanto, las fuerzas oscuras comienzan a eliminar a todos aquellos que sospechan de la verdadera identidad del niño.</span>
+  </a>
+</li>
+<!--FIN--><!-- La profecia -->
 <li>
   <a href="../Peliculas/pelicula840.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
