--- a/Plataforma/fox/index.html
+++ b/Plataforma/fox/index.html
@@ -166,7 +166,17 @@ document.addEventListener("DOMContentLoaded", () => {
   </header>
   <main class="max-w-[1280px] mx-auto px-4 mt-24">
     <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Damian: la profecia II -->
+      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- La profecia III -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula842.html">
+    <img src="https://image.tmdb.org/t/p/original/pINF9b9NeHtWAN0skAZkZUtYgUQ.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">La profecía III</div>
+  <div class="text-xs text-white/70">1981</div>
+</article><!-- Damian: la profecia II -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula841.html">
     <img src="https://image.tmdb.org/t/p/original/pTSQ3VMTAxb5JJcQDJoyAFOoNtP.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
