Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -96,6 +96,15 @@
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
 <!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- La profecia III -->
 <li>
+  <a href="../Peliculas/pelicula843.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/pINF9b9NeHtWAN0skAZkZUtYgUQ.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">La profecía III 1981</span>
+    <span class="hidden">El Anticristo, Damien Thorn, acaba de ser nombrado embajador de Estados Unidos en Gran Bretaña a los 32 años de edad. Damien sale en busca de la resurrección de Cristo, mientras es amenazado de muerte por un grupo encabezado por el padre DeCarlo.</span>
+  </a>
+</li>
+<!--FIN--><!-- La profecia III -->
+<li>
   <a href="../Peliculas/pelicula842.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
   src="https://image.tmdb.org/t/p/original/pINF9b9NeHtWAN0skAZkZUtYgUQ.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
