Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- La profecia III -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- La profecia IV: El despertar -->
+<li>
+  <a href="../Peliculas/pelicula844.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/gTKFrH64uClBiHld6We0HLuy7tg.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">La profecía IV: El despertar 1991</span>
+    <span class="hidden">Una niña es adoptada por un matrimonio que no pueden tener hijos. La pequeña se comportará de manera inusual, de forma que su madre adoptiva contratará a un investigador para que descubra a los verdaderos progenitores de la niña.</span>
+  </a>
+</li>
+<!--FIN--><!-- La profecia III -->
 <li>
   <a href="../Peliculas/pelicula843.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
