--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -100,7 +100,7 @@
    <img 
   src="https://image.tmdb.org/t/p/original/fnxcYzU6EPzTNNKefEp0mEqTAlF.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
     <span class="hidden">Presagio 2009</span>
-    <span class="hidden">El profesor del M.I.T. John Koestler vincula una misteriosa lista de números de una cápsula del tiempo con desastres pasados y futuros y se propone prevenir la catástrofe definitiva.</span>
+    <span class="hidden">Señales del de el futuro mañana presag10 El profesor del M.I.T. John Koestler vincula una misteriosa lista de números de una cápsula del tiempo con desastres pasados y futuros y se propone prevenir la catástrofe definitiva.</span>
   </a>
 </li>
 <!--FIN--><!-- La profecia IV: El despertar -->
@@ -110,15 +110,6 @@
   src="https://image.tmdb.org/t/p/original/gTKFrH64uClBiHld6We0HLuy7tg.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
     <span class="hidden">La profecía IV: El despertar 1991</span>
     <span class="hidden">Una niña es adoptada por un matrimonio que no pueden tener hijos. La pequeña se comportará de manera inusual, de forma que su madre adoptiva contratará a un investigador para que descubra a los verdaderos progenitores de la niña.</span>
-  </a>
-</li>
-<!--FIN--><!-- La profecia III -->
-<li>
-  <a href="../Peliculas/pelicula843.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
-   <img 
-  src="https://image.tmdb.org/t/p/original/pINF9b9NeHtWAN0skAZkZUtYgUQ.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
-    <span class="hidden">La profecía III 1981</span>
-    <span class="hidden">El Anticristo, Damien Thorn, acaba de ser nombrado embajador de Estados Unidos en Gran Bretaña a los 32 años de edad. Damien sale en busca de la resurrección de Cristo, mientras es amenazado de muerte por un grupo encabezado por el padre DeCarlo.</span>
   </a>
 </li>
 <!--FIN--><!-- La profecia III -->
