Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- El legado del diablo -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- La marca del demonio -->
+<li>
+  <a href="../Peliculas/pelicula847.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/xTHU96p67nyov4gXIWGvio7OGEk.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">La marca del demonio 2020</span>
+    <span class="hidden">Un sacerdote exorcista conoce a una familia que tiene una hija que es perseguida por un demonio.  Karl, un hombre que sufre una posesión demoníaca y Tomás, un sacerdote con problemas de adicción, emprenden una búsqueda de demonios encontrándose con el caso de Camila, una chica que ataca a su familia siendo controlada por un demonio. Karl y Tomás intentan salvarla comenzando una batalla, Karl ha enfrentado a muchos seres del más allá pero nunca a uno como éste.</span>
+  </a>
+</li>
+<!--FIN--><!-- El legado del diablo -->
 <li>
   <a href="../Peliculas/pelicula846.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
