--- a/Categorias/movie/index.html
+++ b/Categorias/movie/index.html
@@ -75,7 +75,17 @@
 </header>
 <main class="max-w-[1280px] mx-auto px-4 mt-24">
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- La marca del demonio -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Arrastrame al infierno -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula848.html">
+    <img src="https://image.tmdb.org/t/p/original/8ubtl4phLy5iisPWVF5RAP2grow.jpg" alt="Arrástrame al infierno" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Arrástrame al infierno</div>
+  <div class="text-xs text-white/70">2009</div>
+</article><!-- La marca del demonio -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula847.html">
     <img src="https://image.tmdb.org/t/p/original/xTHU96p67nyov4gXIWGvio7OGEk.jpg" alt="La marca del demonio" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
