Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- La marca del demonio -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Arrastrame al infierno -->
+<li>
+  <a href="../Peliculas/pelicula848.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/8ubtl4phLy5iisPWVF5RAP2grow.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Arrástrame al infierno 2009</span>
+    <span class="hidden">La joven Christine Brown, ambiciosa apoderada de un banco de Los Ángeles, sale con un hombre encantador, el profesor Clay Dalton. El trabajo de Christine consiste en conceder préstamos hipotecarios. Un día la señora Ganush, una misteriosa anciana, va al banco para pedirle una moratoria, pero Christine se la niega y la señora Ganush pierde su casa. La anciana decide entonces vengarse lanzándole una maldición que convierte su vida en un infierno. Ante la incomprensión de su escéptico novio, Christine busca la ayuda de un vidente para salvar su alma de una condenación eterna. Intentando ayudarla a recobrar una vida normal, el vidente la guía en una frenética carrera para conjurar el hechizo. Pero las fuerzas del mal se acercan y Christine debe enfrentarse a algo impensable.</span>
+  </a>
+</li>
+<!--FIN--><!-- La marca del demonio -->
 <li>
   <a href="../Peliculas/pelicula847.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
