--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Arrastrame al infierno -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Criaturas del farol -->
+<li>
+  <a href="../Peliculas/pelicula849.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/a98hZhV3ImbqIPmstQQnSMv9QYb.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Criaturas del farol 2024</span>
+    <span class="hidden">Después de que un ambicioso viaje en solitario la deje naufragando en una isla remota, una joven marinera es rescatada por su único habitante: un farero. A medida que los muros de la realidad comienzan a desvanecerse y la confianza entre ellos se deshace, la supervivencia se convierte en una prueba de proporciones extenuantes.</span>
+  </a>
+</li>
+<!--FIN--><!-- Arrastrame al infierno -->
 <li>
   <a href="../Peliculas/pelicula848.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
