--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Criaturas del farol -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Carnada -->
+<li>
+  <a href="../Peliculas/pelicula850.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/5t8AUixdbBjRXFX9owwz8R5W6Ug.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Carnada 2024</span>
+    <span class="hidden">Sigue a un grupo de cinco amigas que deben luchar por sus vidas en aguas abiertas después de que una boda de ensueño se transforme en una pesadilla.</span>
+  </a>
+</li>
+<!--FIN--><!-- Criaturas del farol -->
 <li>
   <a href="../Peliculas/pelicula849.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
