--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -100,7 +100,7 @@
    <img 
   src="https://image.tmdb.org/t/p/original/5t8AUixdbBjRXFX9owwz8R5W6Ug.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
     <span class="hidden">Carnada 2024</span>
-    <span class="hidden">Sigue a un grupo de cinco amigas que deben luchar por sus vidas en aguas abiertas después de que una boda de ensueño se transforme en una pesadilla.</span>
+    <span class="hidden">algo bajo el agua Sigue a un grupo de cinco amigas que deben luchar por sus vidas en aguas abiertas después de que una boda de ensueño se transforme en una pesadilla.</span>
   </a>
 </li>
 <!--FIN--><!-- Criaturas del farol -->
@@ -109,7 +109,7 @@
    <img 
   src="https://image.tmdb.org/t/p/original/a98hZhV3ImbqIPmstQQnSMv9QYb.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
     <span class="hidden">Criaturas del farol 2024</span>
-    <span class="hidden">Después de que un ambicioso viaje en solitario la deje naufragando en una isla remota, una joven marinera es rescatada por su único habitante: un farero. A medida que los muros de la realidad comienzan a desvanecerse y la confianza entre ellos se deshace, la supervivencia se convierte en una prueba de proporciones extenuantes.</span>
+    <span class="hidden">en el Después de que un ambicioso viaje en solitario la deje naufragando en una isla remota, una joven marinera es rescatada por su único habitante: un farero. A medida que los muros de la realidad comienzan a desvanecerse y la confianza entre ellos se deshace, la supervivencia se convierte en una prueba de proporciones extenuantes.</span>
   </a>
 </li>
 <!--FIN--><!-- Arrastrame al infierno -->
