--- a/Categorias/suspense/index.html
+++ b/Categorias/suspense/index.html
@@ -78,7 +78,17 @@ stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
 </header>
 <main class="max-w-[1280px] mx-auto px-4 mt-24">
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Carnada -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Criaturas: Linea de extincion -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula851.html">
+    <img src="https://image.tmdb.org/t/p/original/92cd9vR6ThBqT6Pe6m5daxX0rAk.jpg" alt="Criaturas: Línea de extinción" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Criaturas: Línea de extinción</div>
+  <div class="text-xs text-white/70">2024</div>
+</article><!-- Carnada -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula850.html">
     <img src="https://image.tmdb.org/t/p/original/5t8AUixdbBjRXFX9owwz8R5W6Ug.jpg" alt="Carnada" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
