Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Carnada -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Criaturas: Linea de extincion -->
+<li>
+  <a href="../Peliculas/pelicula851.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/92cd9vR6ThBqT6Pe6m5daxX0rAk.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Criaturas: Línea de extinción 2024</span>
+    <span class="hidden">Un padre soltero y dos mujeres se aventuran desde la seguridad de sus hogares a enfrentarse a criaturas monstruosas para salvar la vida de un niño.</span>
+  </a>
+</li>
+<!--FIN--><!-- Carnada -->
 <li>
   <a href="../Peliculas/pelicula850.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
