Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Criaturas: Linea de extincion -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Almost Cops -->
+<li>
+  <a href="../Peliculas/pelicula852.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/vIkfAFMOOro5U01raZJ9nScGeBM.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Almost Cops 2025</span>
+    <span class="hidden">Cuando un oficial comunitario demasiado entusiasta y un temerario exdetective se ven obligados a trabajar juntos, oleadas de caos inundan las calles de Róterdam.</span>
+  </a>
+</li>
+<!--FIN--><!-- Criaturas: Linea de extincion -->
 <li>
   <a href="../Peliculas/pelicula851.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
