--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -100,7 +100,7 @@
    <img 
   src="https://image.tmdb.org/t/p/original/vIkfAFMOOro5U01raZJ9nScGeBM.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
     <span class="hidden">Almost Cops 2025</span>
-    <span class="hidden">Cuando un oficial comunitario demasiado entusiasta y un temerario exdetective se ven obligados a trabajar juntos, oleadas de caos inundan las calles de Róterdam.</span>
+    <span class="hidden">casi policias bad boas Cuando un oficial comunitario demasiado entusiasta y un temerario exdetective se ven obligados a trabajar juntos, oleadas de caos inundan las calles de Róterdam.</span>
   </a>
 </li>
 <!--FIN--><!-- Criaturas: Linea de extincion -->
