Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Almost Cops -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- 8 Mile: Calle de ilusiones -->
+<li>
+  <a href="../Peliculas/pelicula853.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/bRSMRkf06aUeZcmr5Cyxuv5vk4T.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">8 Mile: Calle de ilusiones 2002</span>
+    <span class="hidden">La gente de Detroit conoce al limite de la Ciudad como 8 Mile. Pero este límite no solamente es físico sino que es una barrera psicologica que separa a Jimmy Smith de lo que el quiere llegar a ser. 8 Mile Calle de las Ilusiones es una provocativa refleión de lo que implica una semana para la vida de Jimmy. Esta película es estelarizada por el multi-premiado artista EMINEM en su primer papel protagónico jacompañado por Kim Basinger como su madre.</span>
+  </a>
+</li>
+<!--FIN--><!-- Almost Cops -->
 <li>
   <a href="../Peliculas/pelicula852.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
