Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- 8 Mile: Calle de ilusiones -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Ghostbusters: Apocalipsis fantasma -->
+<li>
+  <a href="../Peliculas/pelicula854.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/tx4VtdY13gid5hplO4qJSYf6Fi0.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Ghostbusters: Apocalipsis fantasma 2024</span>
+    <span class="hidden">La familia Spengler regresa al lugar donde empezó todo, la icónica estación de bomberos de la ciudad de Nueva York, para formar equipo con los Cazafantasmas originales, quienes han desarrollado un laboratorio de investigación ultrasecreto para llevar la caza de fantasmas al siguiente nivel. Pero cuando el descubrimiento de un antiguo artefacto desata una fuerza maligna, los Cazafantasmas nuevos y antiguos deben unir fuerzas para proteger su hogar y salvar al mundo de una segunda Edad de Hielo.</span>
+  </a>
+</li>
+<!--FIN--><!-- 8 Mile: Calle de ilusiones -->
 <li>
   <a href="../Peliculas/pelicula853.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
