Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Ghostbusters: Apocalipsis fantasma -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Ghostbusters: El Legado -->
+<li>
+  <a href="../Peliculas/pelicula855.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/1jy2R4irQMZEaHvGkKoyuaKJPJO.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Ghostbusters: El Legado 2021</span>
+    <span class="hidden">Cuando una madre soltera y dos niños llegan a un pequeño pueblo, ellos comienzan a descubrir la conexión entre los cazafantasmas originales y el legado secreto que dejó su abuelo.</span>
+  </a>
+</li>
+<!--FIN--><!-- Ghostbusters: Apocalipsis fantasma -->
 <li>
   <a href="../Peliculas/pelicula854.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
