Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Ghostbusters: El Legado -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Cazafantasmas -->
+<li>
+  <a href="../Peliculas/pelicula856.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/gG8Tv060zoUwmeGEk8lGBULO9hw.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Cazafantasmas 2016</span>
+    <span class="hidden">Manhattan, Nueva York. Después de casi treinta años sin saber de ellos, los fantasmas y demonios se han vuelto a escapar de los infiernos para destruir la ciudad. Esta vez un nuevo equipo de cazafantasmas, formado por un grupo de cuatro mujeres, está dispuesto a terminar con cualquier amenaza espectral.</span>
+  </a>
+</li>
+<!--FIN--><!-- Ghostbusters: El Legado -->
 <li>
   <a href="../Peliculas/pelicula855.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
