Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Los Cazafantasmas 2 -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Los Cazafantasmas -->
+<li>
+  <a href="../Peliculas/pelicula858.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/7eZUL4fvjVkmNPbD8IxQT4X9emt.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Los Cazafantasmas 1984</span>
+    <span class="hidden">Los Drs. Venkman, Stantz y Epengler, son tres doctores en parapsicología que se quedan sin empleo tras quedar excluidos de una beca universitaria de investigación. Entonces deciden formar la empresa "Los Cazafantasmas", dedicada a limpiar Nueva York de ectoplasmas. El aumento repentino de apariciones espectrales en la Gran Manzana será el presagio de la llegada de un peligroso y poderoso demonio.</span>
+  </a>
+</li>
+<!--FIN--><!-- Los Cazafantasmas 2 -->
 <li>
   <a href="../Peliculas/pelicula857.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
