Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Los Cazafantasmas -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Tron: El Legado -->
+<li>
+  <a href="../Peliculas/pelicula859.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/m3tkTgatN1IuwKGAFnsiLakRQLh.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Tron: El Legado 2010</span>
+    <span class="hidden">En un intento de descubrir la desaparición de su padre, el audaz Sam Flynn logra ingresar a un mundo digital. Acompañado de Quorra, Sam emprende una misión para impedir los planes del malvado dictador Clu.</span>
+  </a>
+</li>
+<!--FIN--><!-- Los Cazafantasmas -->
 <li>
   <a href="../Peliculas/pelicula858.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
