--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Tron: El Legado -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Los Pitufos -->
+<li>
+  <a href="../Peliculas/pelicula860.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/ufpzGicM1hZQMzRzTRHAcIQXjXi.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Los Pitufos 2011</span>
+    <span class="hidden">Cuando el malvado mago Gargamel persigue a los pequeños pitufos azules fuera de su pueblo, caen de su mundo mágico al nuestro en el medio de Central Park. Entonces los pitufos deben encontrar la manera de regresar a su aldea antes de que Gargamel los atrapé.</span>
+  </a>
+</li>
+<!--FIN--><!-- Tron: El Legado -->
 <li>
   <a href="../Peliculas/pelicula859.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
