Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Los Pitufos 2 -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Los Pitufos en la aldea perdida -->
+<li>
+  <a href="../Peliculas/pelicula862.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/zqXn3gaMBNHNK7YHdYNidwWrJoT.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Los Pitufos en la aldea perdida 2017</span>
+    <span class="hidden">A Pitufina le parece que todos los demás habitantes de la aldea tienen un propósito: Papá Pitufo, Pitufo Panadero, incluso Pitufo Gruñón; salvo ella. Así que, ¿qué puede hacer la única chica de la aldea? ¡Pues partir en busca del suyo, naturalmente! Cuando se cruza por casualidad con una misteriosa criatura que huye hacia el Bosque Encantado, la sigue y se interna por territorio inexplorado y totalmente prohibido. A ella se le unen sus hermanos Filósofo, Valiente y Torpe y con el malvado mago Gargamel siguiéndolos de cerca. El equipo pitufo emprenderá así un alocado viaje lleno de acción, peligro y descubrimientos, que los conducirá al mayor misterio de la historia Pitufa.</span>
+  </a>
+</li>
+<!--FIN--><!-- Los Pitufos 2 -->
 <li>
   <a href="../Peliculas/pelicula861.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
