--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Los Pitufos en la aldea perdida -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Las amistades particulares -->
+<li>
+  <a href="../Peliculas/pelicula863.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/xOEvfMMiGvGJQQv1n9gWk1SQm6g.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Las amistades particulares 1964</span>
+    <span class="hidden">Un estudiante matriculado en un colegio católico de chicos, en la Francia de los años treinta, comienza a colaborar en una campaña iniciada por sus profesores para frenar cualquier tipo de relación, más allá de la pura amistad, que pueda surgir entre los alumnos.</span>
+  </a>
+</li>
+<!--FIN--><!-- Los Pitufos en la aldea perdida -->
 <li>
   <a href="../Peliculas/pelicula862.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
