Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Las amistades particulares -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Forrest Gump -->
+<li>
+  <a href="../Peliculas/pelicula864.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/oiqKEhEfxl9knzWXvWecJKN3aj6.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Forrest Gump 1994</span>
+    <span class="hidden">Basada en la novela homónima del escritor Winston Groom, la película fue dirigida por Robert Zemeckis y protagonizada por Tom Hanks. La historia describe varias décadas de la vida de Forrest Gump, un nativo de Alabama que sufre de una leve discapacidad intelectual.</span>
+  </a>
+</li>
+<!--FIN--><!-- Las amistades particulares -->
 <li>
   <a href="../Peliculas/pelicula863.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
