Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Forrest Gump -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Busqueda implacable -->
+<li>
+  <a href="../Peliculas/pelicula865.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/fO9HTzeL7sd346tybTfbd99Nv3R.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Búsqueda implacable 2008</span>
+    <span class="hidden">Bryan Mills (Liam Neeson) es un agente especial jubilado. Pero cuando su hija Kim (Maggie Grace) es secuestrada en París por una organización criminal albanokosovar, tendrá que volver a la acción para intentar salvarla. La banda se dedica a una red de trata de blancas, por lo que Mills sabe que sólo dispone de unas horas para conseguir rescatarla antes de que se pierda el rastro de su hija.</span>
+  </a>
+</li>
+<!--FIN--><!-- Forrest Gump -->
 <li>
   <a href="../Peliculas/pelicula864.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
