--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -100,7 +100,7 @@
    <img 
   src="https://image.tmdb.org/t/p/original/fO9HTzeL7sd346tybTfbd99Nv3R.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
     <span class="hidden">Búsqueda implacable 2008</span>
-    <span class="hidden">Bryan Mills (Liam Neeson) es un agente especial jubilado. Pero cuando su hija Kim (Maggie Grace) es secuestrada en París por una organización criminal albanokosovar, tendrá que volver a la acción para intentar salvarla. La banda se dedica a una red de trata de blancas, por lo que Mills sabe que sólo dispone de unas horas para conseguir rescatarla antes de que se pierda el rastro de su hija.</span>
+    <span class="hidden">venganza takken tekken Bryan Mills (Liam Neeson) es un agente especial jubilado. Pero cuando su hija Kim (Maggie Grace) es secuestrada en París por una organización criminal albanokosovar, tendrá que volver a la acción para intentar salvarla. La banda se dedica a una red de trata de blancas, por lo que Mills sabe que sólo dispone de unas horas para conseguir rescatarla antes de que se pierda el rastro de su hija.</span>
   </a>
 </li>
 <!--FIN--><!-- Forrest Gump -->
@@ -127,7 +127,7 @@
    <img 
   src="https://image.tmdb.org/t/p/original/zqXn3gaMBNHNK7YHdYNidwWrJoT.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
     <span class="hidden">Los Pitufos en la aldea perdida 2017</span>
-    <span class="hidden">A Pitufina le parece que todos los demás habitantes de la aldea tienen un propósito: Papá Pitufo, Pitufo Panadero, incluso Pitufo Gruñón; salvo ella. Así que, ¿qué puede hacer la única chica de la aldea? ¡Pues partir en busca del suyo, naturalmente! Cuando se cruza por casualidad con una misteriosa criatura que huye hacia el Bosque Encantado, la sigue y se interna por territorio inexplorado y totalmente prohibido. A ella se le unen sus hermanos Filósofo, Valiente y Torpe y con el malvado mago Gargamel siguiéndolos de cerca. El equipo pitufo emprenderá así un alocado viaje lleno de acción, peligro y descubrimientos, que los conducirá al mayor misterio de la historia Pitufa.</span>
+    <span class="hidden">la aldea escondida A Pitufina le parece que todos los demás habitantes de la aldea tienen un propósito: Papá Pitufo, Pitufo Panadero, incluso Pitufo Gruñón; salvo ella. Así que, ¿qué puede hacer la única chica de la aldea? ¡Pues partir en busca del suyo, naturalmente! Cuando se cruza por casualidad con una misteriosa criatura que huye hacia el Bosque Encantado, la sigue y se interna por territorio inexplorado y totalmente prohibido. A ella se le unen sus hermanos Filósofo, Valiente y Torpe y con el malvado mago Gargamel siguiéndolos de cerca. El equipo pitufo emprenderá así un alocado viaje lleno de acción, peligro y descubrimientos, que los conducirá al mayor misterio de la historia Pitufa.</span>
   </a>
 </li>
 <!--FIN--><!-- Los Pitufos 2 -->
